<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@android:color/transparent">

    <ImageButton
        android:id="@+id/back_arrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:background="@drawable/circular_semi_transparent_dark_red_background"
        android:contentDescription="Back"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_24dp"
        android:elevation="4dp"/>

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Now Playing"
        android:textAppearance="@style/TextAppearance.App.PixelFont"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:letterSpacing="-0.05"/>

</RelativeLayout>
